- fixed water not freezing despite being cold enough (#228)
- fixed issues with vents (#231)