@@ -3,6 +3,14 @@
   "values": [
     "ad_astra:fuel",
     "ad_astra:flowing_fuel",
-    "#ad_astra:efficient_fuel"
+    "#ad_astra:efficient_fuel",
+    {
+      "required": false,
+      "id": "#ad_astra_platform:diesel"
+    },
+    {
+      "required": false,
+      "id": "#ad_astra_platform:biodiesel"
+    }
   ]
 }
